Avoid edge case overlap

--- a/app/assets/stylesheets/components/admin-page/_workflow-thumbnail.scss
+++ b/app/assets/stylesheets/components/admin-page/_workflow-thumbnail.scss
@@ -28,7 +28,7 @@
 .admin-workflow-thumbnail-overlay {
   position: absolute;
   text-align: center;
-  padding: 15px 12px;
+  padding: 15px 10px;
   line-height: 1.2;
   background-color: $aperta-blue-dark;
 }
